--- a/FBlightBox.css
+++ b/FBlightBox.css
@@ -15,3 +15,57 @@
 #leftBig img{ max-width : 499px; max-height:500px; padding:5px;  position: absolute; top: 0; bottom: 0; left: 0;  right: 0;  margin: auto;  }
 #LightBox span{color:#00EBFF;}
 #LightBox span:hover{color:#00EBFF; text-decoration: underline;}
+.clear{clear:both;}
+
+
+/*media stuff*/
+
+/* Smartphones (portrait and landscape) ----------- */  
+
+@media only screen  and (max-width : 320px) {  
+ 	#right{
+ 		  float: none;
+    height: 461px;
+    
+    width: 60%;
+ 	}
+ 	#leftCont{
+ 		display: none;
+	}
+	#mainContent{
+		top:10px !important;
+		left: 10px;
+	}
+
+	 .imageLone{
+	 	left:-140px !important;
+	 }
+	 .imageLone img{
+	 	width:290px;
+	 }
+
+}  
+  
+  @media only screen  and (min-width: 321px) and (max-width : 480px) {  
+ 	#right{
+ 		   float: none;
+    height: 300px;
+    width: 92%;
+ 	}
+ 	#leftCont{
+ 		display: none;
+	}
+	#mainContent{
+		top:10px !important;
+		left: 10px;
+	}
+	.imageLone{
+	 	left:-200px !important;
+	 }
+	 .imageLone img{
+	 	width:430px;
+	 }
+
+}
+ 
+  
